Error disabling axis lock on grab in object mode #78826

Closed
opened 2020-07-11 13:26:46 +02:00 by Antonio Puentes · 7 comments

System Information
Operating system: Linux-5.7.0-3-MANJARO-x86_64-with-arch-Manjaro-Linux 64 Bits
Graphics card: GeForce GTX 660/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.82

Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-07-10 20:07, hash: d2b910fafe
Worked: 2.83

Short description of error
When you move an object, with the transform orientation set to global, and you press x, y, or z three times to lock on global axis, lock on local axis, and disable lock on axis, the last step doesn't work like 2.83

Exact steps for others to reproduce the error

  • With load factory settings.
  • Transform Orientation in Global
  • Default cube in object mode
  • press G to move
  • press Z to lock on global axis
  • press Z to lock on local axis
  • press Z to disable lock axis ( but if you move the mouse up and down, the object moves on the global Y axis, and if you move the mouse left and right, the object moves on the global X axis
**System Information** Operating system: Linux-5.7.0-3-MANJARO-x86_64-with-arch-Manjaro-Linux 64 Bits Graphics card: GeForce GTX 660/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.82 **Blender Version** Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-07-10 20:07, hash: `d2b910fafe` Worked: 2.83 **Short description of error** When you move an object, with the transform orientation set to global, and you press x, y, or z three times to lock on global axis, lock on local axis, and disable lock on axis, the last step doesn't work like 2.83 **Exact steps for others to reproduce the error** - With load factory settings. - Transform Orientation in Global - Default cube in object mode - press G to move - press Z to lock on global axis - press Z to lock on local axis - press Z to disable lock axis ( but if you move the mouse up and down, the object moves on the global Y axis, and if you move the mouse left and right, the object moves on the global X axis

Added subscriber: @AntonioPuentes

Added subscriber: @AntonioPuentes

Added subscriber: @APEC

Added subscriber: @APEC

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @mont29

Added subscriber: @mont29

Caused by 45f17e10ec.

Caused by 45f17e10ec.

This issue was referenced by 84f7de432c

This issue was referenced by 84f7de432c72e941477b74ab7cb3b749b85566ac

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2020-07-29 14:09:58 +02:00
Thomas Dinges added this to the 2.90 milestone 2023-02-08 16:26:16 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#78826
No description provided.