Fix T78826: Move constraint is not fully disabled

Caused by rB45f17e10ec50